# flask-portal-metrics

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: db-swap.md
.github/workflows/: pypi_publish.yaml
flask_portal_metrics/: __init__.py  core.py  exports.py  middleware.py  models.py
flask_portal_metrics/static/: metrics.js
tests/: __init__.py  conftest.py  test_core.py  test_exports.py
